--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .main h2 {
@@ -104,4 +105,31 @@ h1 {
   font-size: 16px;
   color: #75777b;
   text-align: center;
+}
+
+.quote {
+  background-color: #e5e7eb;
+  padding: 100px 0 85px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.quote .text {
+  max-width: 800px;
+  margin: 0 auto;
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: 300;
+  font-style: italic;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.attribution {
+  font-size: 18px;
+  font-weight: 700;
+  font-style: normal;
+  margin-right: 48px;
 }
