Add footer and call to action bar

--- a/styles.css
+++ b/styles.css
@@ -133,3 +133,49 @@ h1 {
   font-style: normal;
   margin-right: 48px;
 }
+
+.bar {
+  background-color: #3882f6;
+  color: #f9faf8;
+  max-width: 900px;
+  margin: 72px auto;
+  padding: 32px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.bar .container {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.bar .title {
+  font-size: 16px;
+  font-weight: 900;
+}
+
+.bar .text {
+  font-size: 12px;
+}
+
+.bar button {
+  color: #f9faf8;
+  font-weight: 700;
+  background-color: #3882f6;
+  border: 2px solid #f9faf8;
+  border-radius: 6px;
+  padding: 8px 32px;
+}
+
+.footer {
+  background-color: #1f2937;
+  color: #f9faf8;
+  padding: 32px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
